{ Rabbit MQ. Onboard Mail Send Done! }
